k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sima-app
  namespace: sima
  labels:
    app: sima-app
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: sima-app
