k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sima-app
  namespace: sima
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "20m"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: sima-app.smkn12jakarta.sch.id
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sima-app
                port:
                  number: 80
